Tests: Update UserServiceTest and UserConverterTest